# rokot-ble-midi

./: .gitignore  CMakeLists.txt  LICENSE  README.md
boards/: rokot_board.h
examples/battery/: CMakeLists.txt  main.c
examples/simple_note/: CMakeLists.txt  README.md  main.c
include/: rokot_ble_midi.h
src/: btstack_config.h  rokot_ble_midi.c  rokot_ble_midi_service.gatt
